# Store-Good-Management

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: exception.hpp  product.hpp  productvec.hpp  prostore.hpp
src/: product.cpp  productvec.cpp  prostore.cpp
